# fck-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
api/: CMakeLists.txt
api/cmake/: apiConfig.cmake
api/include/: fck_apis.h
api/src/: fck_apis.c
app/: CMakeLists.txt  CMakeSettings.json
app-loadable/: CMakeLists.txt
app-loadable/cmake/: app-loadableConfig.cmake
app-loadable/include/: fck_app_loadable.h
app/cmake/: appConfig.cmake
app/include/: fck_apis.h  fck_instance.h  fck_nuklear_demos.h  fck_serialiser.h  fck_serialiser_json_vt.h  fck_serialiser_nk_edit_vt.h  fck_serialiser_vt.h  fck_set.h  fck_stretchy.h  fck_type_system.h  fck_ui.h  fck_ui_window_manager.h  nuklear.h  yyjson.h
app/src/: fck.set.c  fck_apis.c  fck_instance.c  fck_serialiser.c  fck_serialiser_byte_vt.c  fck_serialiser_json_vt.c  fck_serialiser_nk_edit_vt.c  fck_serialiser_string_vt.c  fck_set.c  fck_stretchy.c  fck_type_system.c  fck_type_system.inl  fck_type_system_identifiers.c  fck_type_system_marshal.c  fck_type_system_members.c  fck_type_system_runtime_implementation.c  fck_type_system_serialisation.c  fck_type_system_serialise_interface.c  fck_type_system_types.c  fck_ui.c  fck_ui_window_manager.c  main.c  nk_style.c  yyjson.c
app/test/: main.c
canvas/: CMakeLists.txt
canvas/cmake/: canvasConfig.cmake
canvas/include/: fck_canvas.h
canvas/src/: fck_canvas.c
cnt/: .clang-format  CMakeLists.txt
cnt/cmake/: cntConfig.cmake
cnt/include/: cnt_net.h
cnt/src/: cnt_net.c  lz4.c  lz4.h
dynarr/: CMakeLists.txt  CMakeSettings.json
dynarr/cmake/: dynarrConfig.cmake
dynarr/include/: fck_dynarr.h
dynarr/src/: fck_drynarr.c
events/: CMakeLists.txt
events/cmake/: eventsConfig.cmake
events/include/: fck_events.h
example-headers/: CMakeLists.txt
example-headers/cmake/: example-headersConfig.cmake
example-lib/: CMakeLists.txt
example-lib/cmake/: example-libConfig.cmake
fck-lib/: .clang-tidy  CMakeLists.txt
fck-lib/cmake/: fck-libConfig.cmake
fck-lib/test/: main.c
fckc/: CMakeLists.txt
fckc/cmake/: fckcConfig.cmake
fckc/include/: fckc_apidef.h  fckc_assert.h  fckc_atomic.h  fckc_inttypes.h  fckc_math.h
hash/: CMakeLists.txt  hashConfig.cmake  main.c
hash/cmake/: hashConfig.cmake
hash/include/: fck_hash.h
img/: CMakeLists.txt
img-sdl/: CMakeLists.txt
img-sdl/cmake/: img-sdlConfig.cmake
img-sdl/src/: fck_img.c
img/cmake/: imgConfig.cmake
img/include/: fck_img.h
img/src/: fck_img.c
imgui/: CMakeLists.txt
imgui-nk/: CMakeLists.txt
imgui/cmake/: imguiConfig.cmake
imgui/include/: fck_imgui.h
include/: SDL_FRectExtensions.h  fck.h  fck_animator.h  fck_checks.h  fck_drop_file.h  fck_ecs.h  fck_ecs_opaque_style.h  fck_file.h  fck_keyboard.h  fck_memory_stream.h  fck_mouse.h  fck_spritesheet.h  fck_student_testbed.h  fck_ui.h  nuklear.h
include/assets/: fck_assets.h
include/core/: fck_drop_file.h  fck_engine.h  fck_instance.h  fck_instances.h  fck_keyboard.h  fck_mouse.h  fck_time.h
include/ecs/: fck_dense_list.h  fck_ecs.h  fck_ecs_component_traits.h  fck_item.h  fck_iterator.h  fck_queue.h  fck_serialiser.h  fck_sparse_array.h  fck_sparse_arrays.h  fck_sparse_list.h  fck_sparse_lookup.h  fck_system.h  fck_template_constants.h  fck_template_utility.h  fck_trait_utility.h  fck_tuple.h  fck_type_pack.h  fck_uniform_buffer.h
include/game/: game_components.h  game_core.h  game_systems.h
include/net/: cnt_common_types.h  cnt_core.h  cnt_peer.h  cnt_peers.h  cnt_session.h  cnt_transport.h
include/netv2/: cnt_net.h
include/rnd/: rnd_renderer.h
include/shared/: fck_file.h  fck_memory_stream.h
input-source-sdl/: CMakeLists.txt
input-source-sdl/cmake/: input-source-sdlConfig.cmake
kll/: CMakeLists.txt
kll/cmake/: kllConfig.cmake
kll/include/: kll.h  kll_block.h  kll_heap.h  kll_impl_util.h  kll_malloc.h  kll_scratch.h  kll_temp.h
kll/src/: kll.c  kll_block.c  kll_heap.c  kll_scratch.c  kll_temp.c  main.c
kll/test/: main.c
main/: CMakeLists.txt
main/cmake/: mainConfig.cmake
main/src/: main.c
render/: CMakeLists.txt
render-sdl/: CMakeLists.txt
render-sdl/cmake/: render-sdlConfig.cmake
render-sdl/src/: fck_render_sdl.c
render/cmake/: renderConfig.cmake
render/include/: fck_render.h
resources/: animation_data.anim  cammy.png.sprites  shmup.png.sprites  special.font
resources/shaders/: triangle.frag.hlsl  triangle.hlsl  triangle.vert.hlsl
sad/: CMakeLists.txt  CMakeSettings.json  main.cpp
sad/cmake/: sadConfig.cmake
sad/include/: sad_atomic.h  sad_pointer_queue.h  sad_thread.h
sad/src/: sad_atomic.c  sad_pointer_queue.c  sad_thread.c  sad_thread_unix.inl  sad_thread_win.inl
sad/test/: main.c
ser/: CMakeLists.txt
ser-ext/: CMakeLists.txt
ser-ext/cmake/: ser-extConfig.cmake
ser-ext/include/: fck_memory_serialiser.h  fck_serialiser_byte_vt.h  fck_serialiser_ext.h  fck_serialiser_string_vt.h
ser-ext/src/: fck_memory_serialiser.c  fck_serialiser_byte_vt.c  fck_serialiser_ext.c  fck_serialiser_string_vt.c
ser-json/: CMakeLists.txt
ser-json/cmake/: ser-jsonConfig.cmake
ser-json/include/: fck_serialiser_json_vt.h
ser-json/src/: fck_serialiser_json_vt.c  yyjson.c
ser/cmake/: serConfig.cmake
ser/include/: fck_serialiser_vt.h
set/: CMakeLists.txt
set/cmake/: setConfig.cmake
set/include/: fck_set.h
set/src/: fck_set.c
src/: SDL_FRectExtensions.cpp  fck.cpp  fck_animator.cpp  fck_file.cpp  fck_memory_stream.cpp  fck_spritesheet.cpp  fck_ui.cpp  lz4.c  student_program.cpp
src/assets/: fck_assets.cpp
src/core/: fck_engine.cpp  fck_instance.cpp  fck_instances.cpp
src/ecs/: fck_ecs.cpp  fck_serialiser.cpp
src/game/: game_animation.cpp  game_core.cpp  game_gameplay.cpp  game_networking.cpp  game_render.cpp
src/main/: main.cpp
src/net/: cnt_core.cpp  cnt_peers.cpp  cnt_protocol.cpp  cnt_protocol.h  cnt_session.cpp  cnt_transport.cpp
src/netv2/: cnt_net.cpp  cnt_net.h
src/rnd/: rnd_debug.cpp  rnd_debug.h  (+1 more)
std/: CMakeLists.txt
std/cmake/: stdConfig.cmake
std/include/: fck_os.h
std/src/: fck_os.c
ts/: CMakeLists.txt
(+19 files in other folders)
